newtype-tools/tests/trybuild/newtype/enum.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/trybuild/newtype/enum.rs:2:1
  |
2 | enum Enum {}
  | ^^^^
