newtype-tools/tests/trybuild/newtype/enum.rs
#[derive(newtype_tools::Newtype)]
enum Enum {}

fn main() {}
